00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: msda00
  labels:
    environment: demo
