01-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
  namespace: msda000
  labels:
    app: app01
    tier: front
    type: web
spec:
  containers:
  - name: nginx00
    image: nginx
    ports:
    - containerPort: 80
