04-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app01-svc-cluster-ip
  namespace: msda00
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app01-svc-cluster-ip-selector
  namespace: msda00
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: app01
    tier: frontend
    type: web

---
apiVersion: v1
kind: Service
metadata:
  name: app01-svc-node
  namespace: msda000
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  selector:
    app: app01
    tier: frontend
    type: web

---
apiVersion: v1
kind: Service
metadata:
  name: app01-svc-external-name
  namespace: msda00
spec:
  type: ExternalName
  externalName: 10.0.3.253
