06-public-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/affinity: cookie
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "https"
    # nginx.ingress.kubernetes.io/backend-protocol: "http"
    # nginx.ingress.kubernetes.io/ssl-ciphers: "ALL:!aNULL:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/proxy-body-size: 3000m
    # nginx.ingress.kubernetes.io/client-body-buffer-size: 3000M
    # nginx.ingress.kubernetes.io/proxy-connect-timeout: 30s
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    # nginx.ingress.kubernetes.io/proxy-ssl-name: "my-hostname"
    # nginx.ingress.kubernetes.io/proxy-ssl-verify: "on"
spec:
  rules:
  - host: pip-demo-ate-dev-neu-00.westeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: app01-svc-cluster-ip-selector
            port: 
              number: 80
        path: /
        pathType: Prefix
